# fb2server

./: Cargo.toml  README.md
docker-arm32v7-build/: Dockerfile  Makefile
docker-arm64v8-init-volume/: Dockerfile  configure.sh
docker-arm64v8-update/: Dockerfile  configure.sh
src/lib/: books.rs  lib.rs  opds.rs  search.rs  statistic.rs
src/lib/database/: mod.rs
src/lib/impls/: authors.rs  genres.rs  mod.rs  series.rs
src/lib/opds/: mod.rs
src/lib/utils/: mod.rs
