[package]
name = "opds_server"
version = "0.3.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "opds_server"
path = "src/bin/main.rs"

[dependencies]
    anyhow = "1.0"
    actix-rt = "2.10"
    actix-web = "4.8"
    actix-files = "0.6"
    sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
    log = "0.4"
    env_logger = "0.11"
    quick-xml = "0.35.0"
    chrono = "0.4"
    lazy_static = "1.5"
    regex = "1.10"
    zip = "2.1"
    itertools = "0.13"
    base64 = "0.22"
    async-trait = "0.1"

