[package]
name = "opds_server"
version = "1.2.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "opds_server"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
actix-web = "4"
actix-files = "0.6"
log = "0.4"
env_logger = "0.11"
quick-xml = "0.36.0"
chrono = "0.4"
lazy_static = "1.5"
regex = "1.10"
zip = "2"
itertools = "0.13"
futures = "0.3"
percent-encoding = "2.3"
rusqlite = { version = "0.31.0"}
opds_db_api = { git = "https://github.com/seb-odessa/opds_db_api.git", branch = "main", package = "opds_db_api" }
